--- a/代理套餐列表.html
+++ b/代理套餐列表.html
@@ -1072,6 +1072,16 @@
           <p><span>1、上下架需弹窗二次确认；</span></p><p><span>2、套餐名额已购买完毕 不会 自动下架；</span></p><p><span>3、仅下架后才可进行编辑，编辑后已产生数据不变：如已购买人数不变。</span></p>
         </div>
       </div>
+
+      <!-- Unnamed (下拉列表框) -->
+      <div id="u3650" class="ax_default droplist">
+        <select id="u3650_input">
+          <option value="上架状态">上架状态</option>
+          <option value="未上架">未上架</option>
+          <option value="已上架">已上架</option>
+          <option value="已下架">已下架</option>
+        </select>
+      </div>
     </div>
   </body>
 </html>
