--- a/查看详情_1.html
+++ b/查看详情_1.html
@@ -50,6 +50,434 @@
   </head>
   <body>
     <div id="base" class="">
+
+      <!-- top (组合) -->
+      <div id="u4638" class="ax_default" data-label="top">
+
+        <!-- Unnamed (矩形) -->
+        <div id="u4639" class="ax_default box_2">
+          <div id="u4639_div" class=""></div>
+          <!-- Unnamed () -->
+          <div id="u4640" class="text" style="display: none; visibility: hidden">
+            <p><span></span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (图片) -->
+        <div id="u4641" class="ax_default _图片">
+          <img id="u4641_img" class="img " src="images/代理申请列表/u86.svg"/>
+          <!-- Unnamed () -->
+          <div id="u4642" class="text" style="display: none; visibility: hidden">
+            <p><span></span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (矩形) -->
+        <div id="u4643" class="ax_default label">
+          <div id="u4643_div" class=""></div>
+          <!-- Unnamed () -->
+          <div id="u4644" class="text" style="visibility: visible;">
+            <p><span>我的工作台</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (图片) -->
+        <div id="u4645" class="ax_default _图片">
+          <img id="u4645_img" class="img " src="images/代理申请列表/u90.svg"/>
+          <!-- Unnamed () -->
+          <div id="u4646" class="text" style="display: none; visibility: hidden">
+            <p><span></span></p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Title (组合) -->
+      <div id="u4647" class="ax_default" data-label="Title">
+
+        <!-- Unnamed (水平线) -->
+        <div id="u4648" class="ax_default line">
+          <img id="u4648_img" class="img " src="images/代理申请列表/u93.png"/>
+          <!-- Unnamed () -->
+          <div id="u4649" class="text" style="display: none; visibility: hidden">
+            <p><span></span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (矩形) -->
+        <div id="u4650" class="ax_default label">
+          <div id="u4650_div" class=""></div>
+          <!-- Unnamed () -->
+          <div id="u4651" class="text" style="visibility: visible;">
+            <p><span>查看详情</span></p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Background (组合) -->
+      <div id="u4652" class="ax_default" data-label="Background">
+
+        <!-- Unnamed (矩形) -->
+        <div id="u4653" class="ax_default box_2">
+          <div id="u4653_div" class=""></div>
+          <!-- Unnamed () -->
+          <div id="u4654" class="text" style="display: none; visibility: hidden">
+            <p><span></span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (矩形) -->
+        <div id="u4655" class="ax_default _三级标题">
+          <div id="u4655_div" class=""></div>
+          <!-- Unnamed () -->
+          <div id="u4656" class="text" style="visibility: visible;">
+            <p><span>小程序管理员平台</span></p>
+          </div>
+        </div>
+
+        <!-- 12 (组合) -->
+        <div id="u4657" class="ax_default" data-label="12">
+
+          <!-- Unnamed (图片) -->
+          <div id="u4658" class="ax_default _图片">
+            <img id="u4658_img" class="img " src="images/代理申请列表/u6.svg"/>
+            <!-- Unnamed () -->
+            <div id="u4659" class="text" style="display: none; visibility: hidden">
+              <p><span></span></p>
+            </div>
+          </div>
+
+          <!-- Unnamed (矩形) -->
+          <div id="u4660" class="ax_default label">
+            <div id="u4660_div" class=""></div>
+            <!-- Unnamed () -->
+            <div id="u4661" class="text" style="visibility: visible;">
+              <p><span>阅读天使菜单</span></p>
+            </div>
+          </div>
+
+          <!-- Unnamed (图片) -->
+          <div id="u4662" class="ax_default _图片">
+            <img id="u4662_img" class="img " src="images/代理申请列表/u10.svg"/>
+            <!-- Unnamed () -->
+            <div id="u4663" class="text" style="display: none; visibility: hidden">
+              <p><span></span></p>
+            </div>
+          </div>
+        </div>
+
+        <!-- 11 (组合) -->
+        <div id="u4664" class="ax_default" data-label="11">
+
+          <!-- Unnamed (图片) -->
+          <div id="u4665" class="ax_default _图片">
+            <img id="u4665_img" class="img " src="images/代理申请列表/u6.svg"/>
+            <!-- Unnamed () -->
+            <div id="u4666" class="text" style="display: none; visibility: hidden">
+              <p><span></span></p>
+            </div>
+          </div>
+
+          <!-- Unnamed (矩形) -->
+          <div id="u4667" class="ax_default label">
+            <div id="u4667_div" class=""></div>
+            <!-- Unnamed () -->
+            <div id="u4668" class="text" style="visibility: visible;">
+              <p><span>童书巴士菜单</span></p>
+            </div>
+          </div>
+
+          <!-- Unnamed (图片) -->
+          <div id="u4669" class="ax_default _图片">
+            <img id="u4669_img" class="img " src="images/代理申请列表/u17.svg"/>
+            <!-- Unnamed () -->
+            <div id="u4670" class="text" style="display: none; visibility: hidden">
+              <p><span></span></p>
+            </div>
+          </div>
+        </div>
+
+        <!-- 21 (组合) -->
+        <div id="u4671" class="ax_default" data-label="21">
+
+          <!-- Unnamed (矩形) -->
+          <div id="u4672" class="ax_default box_3">
+            <div id="u4672_div" class=""></div>
+            <!-- Unnamed () -->
+            <div id="u4673" class="text" style="display: none; visibility: hidden">
+              <p><span></span></p>
+            </div>
+          </div>
+
+          <!-- Unnamed (组合) -->
+          <div id="u4674" class="ax_default">
+
+            <!-- Unnamed (矩形) -->
+            <div id="u4675" class="ax_default label">
+              <div id="u4675_div" class=""></div>
+              <!-- Unnamed () -->
+              <div id="u4676" class="text" style="visibility: visible;">
+                <p><span>代理管理</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (图片) -->
+            <div id="u4677" class="ax_default _图片">
+              <img id="u4677_img" class="img " src="images/代理申请列表/u10.svg"/>
+              <!-- Unnamed () -->
+              <div id="u4678" class="text" style="display: none; visibility: hidden">
+                <p><span></span></p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- 211 (组合) -->
+        <div id="u4679" class="ax_default" data-label="211">
+
+          <!-- Unnamed (矩形) -->
+          <div id="u4680" class="ax_default box_1">
+            <div id="u4680_div" class=""></div>
+            <!-- Unnamed () -->
+            <div id="u4681" class="text" style="display: none; visibility: hidden">
+              <p><span></span></p>
+            </div>
+          </div>
+
+          <!-- Unnamed (矩形) -->
+          <div id="u4682" class="ax_default label">
+            <div id="u4682_div" class=""></div>
+            <!-- Unnamed () -->
+            <div id="u4683" class="text" style="visibility: visible;">
+              <p><span>代理申请列表</span></p>
+            </div>
+          </div>
+
+          <!-- Unnamed (矩形) -->
+          <div id="u4684" class="ax_default label">
+            <div id="u4684_div" class=""></div>
+            <!-- Unnamed () -->
+            <div id="u4685" class="text" style="visibility: visible;">
+              <p><span>预备代理列表</span></p>
+            </div>
+          </div>
+
+          <!-- Unnamed (矩形) -->
+          <div id="u4686" class="ax_default label">
+            <div id="u4686_div" class=""></div>
+            <!-- Unnamed () -->
+            <div id="u4687" class="text" style="visibility: visible;">
+              <p><span>小区代理列表</span></p>
+            </div>
+          </div>
+
+          <!-- Unnamed (矩形) -->
+          <div id="u4688" class="ax_default label">
+            <div id="u4688_div" class=""></div>
+            <!-- Unnamed () -->
+            <div id="u4689" class="text" style="visibility: visible;">
+              <p><span>用户/会员/城市代理列表</span></p>
+            </div>
+          </div>
+        </div>
+
+        <!-- 22 (组合) -->
+        <div id="u4690" class="ax_default" data-label="22">
+
+          <!-- Unnamed (矩形) -->
+          <div id="u4691" class="ax_default box_3">
+            <div id="u4691_div" class=""></div>
+            <!-- Unnamed () -->
+            <div id="u4692" class="text" style="display: none; visibility: hidden">
+              <p><span></span></p>
+            </div>
+          </div>
+
+          <!-- Unnamed (组合) -->
+          <div id="u4693" class="ax_default">
+
+            <!-- Unnamed (矩形) -->
+            <div id="u4694" class="ax_default label">
+              <div id="u4694_div" class=""></div>
+              <!-- Unnamed () -->
+              <div id="u4695" class="text" style="visibility: visible;">
+                <p><span>会员管理</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (图片) -->
+            <div id="u4696" class="ax_default _图片">
+              <img id="u4696_img" class="img " src="images/代理申请列表/u10.svg"/>
+              <!-- Unnamed () -->
+              <div id="u4697" class="text" style="display: none; visibility: hidden">
+                <p><span></span></p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- 221 (组合) -->
+        <div id="u4698" class="ax_default" data-label="221">
+
+          <!-- Unnamed (矩形) -->
+          <div id="u4699" class="ax_default box_1">
+            <div id="u4699_div" class=""></div>
+            <!-- Unnamed () -->
+            <div id="u4700" class="text" style="display: none; visibility: hidden">
+              <p><span></span></p>
+            </div>
+          </div>
+
+          <!-- Unnamed (矩形) -->
+          <div id="u4701" class="ax_default label">
+            <div id="u4701_div" class=""></div>
+            <!-- Unnamed () -->
+            <div id="u4702" class="text" style="visibility: visible;">
+              <p><span>会员信息列表</span></p>
+            </div>
+          </div>
+        </div>
+
+        <!-- 23 (组合) -->
+        <div id="u4703" class="ax_default" data-label="23">
+
+          <!-- Unnamed (矩形) -->
+          <div id="u4704" class="ax_default box_3">
+            <div id="u4704_div" class=""></div>
+            <!-- Unnamed () -->
+            <div id="u4705" class="text" style="display: none; visibility: hidden">
+              <p><span></span></p>
+            </div>
+          </div>
+
+          <!-- Unnamed (组合) -->
+          <div id="u4706" class="ax_default">
+
+            <!-- Unnamed (矩形) -->
+            <div id="u4707" class="ax_default label">
+              <div id="u4707_div" class=""></div>
+              <!-- Unnamed () -->
+              <div id="u4708" class="text" style="visibility: visible;">
+                <p><span>套餐管理</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (图片) -->
+            <div id="u4709" class="ax_default _图片">
+              <img id="u4709_img" class="img " src="images/代理申请列表/u10.svg"/>
+              <!-- Unnamed () -->
+              <div id="u4710" class="text" style="display: none; visibility: hidden">
+                <p><span></span></p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- 24 (组合) -->
+        <div id="u4711" class="ax_default" data-label="24">
+
+          <!-- Unnamed (矩形) -->
+          <div id="u4712" class="ax_default box_3">
+            <div id="u4712_div" class=""></div>
+            <!-- Unnamed () -->
+            <div id="u4713" class="text" style="display: none; visibility: hidden">
+              <p><span></span></p>
+            </div>
+          </div>
+
+          <!-- Unnamed (组合) -->
+          <div id="u4714" class="ax_default">
+
+            <!-- Unnamed (矩形) -->
+            <div id="u4715" class="ax_default label">
+              <div id="u4715_div" class=""></div>
+              <!-- Unnamed () -->
+              <div id="u4716" class="text" style="visibility: visible;">
+                <p><span>书包管理</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (图片) -->
+            <div id="u4717" class="ax_default _图片">
+              <img id="u4717_img" class="img " src="images/代理申请列表/u10.svg"/>
+              <!-- Unnamed () -->
+              <div id="u4718" class="text" style="display: none; visibility: hidden">
+                <p><span></span></p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- 231 (组合) -->
+        <div id="u4719" class="ax_default" data-label="231">
+
+          <!-- Unnamed (矩形) -->
+          <div id="u4720" class="ax_default box_1">
+            <div id="u4720_div" class=""></div>
+            <!-- Unnamed () -->
+            <div id="u4721" class="text" style="display: none; visibility: hidden">
+              <p><span></span></p>
+            </div>
+          </div>
+
+          <!-- Unnamed (矩形) -->
+          <div id="u4722" class="ax_default label">
+            <div id="u4722_div" class=""></div>
+            <!-- Unnamed () -->
+            <div id="u4723" class="text" style="visibility: visible;">
+              <p><span>会员套餐列表</span></p>
+            </div>
+          </div>
+
+          <!-- Unnamed (矩形) -->
+          <div id="u4724" class="ax_default label">
+            <div id="u4724_div" class=""></div>
+            <!-- Unnamed () -->
+            <div id="u4725" class="text" style="visibility: visible;">
+              <p><span>代理套餐列表</span></p>
+            </div>
+          </div>
+        </div>
+
+        <!-- 241 (组合) -->
+        <div id="u4726" class="ax_default" data-label="241">
+
+          <!-- Unnamed (矩形) -->
+          <div id="u4727" class="ax_default box_1">
+            <div id="u4727_div" class=""></div>
+            <!-- Unnamed () -->
+            <div id="u4728" class="text" style="display: none; visibility: hidden">
+              <p><span></span></p>
+            </div>
+          </div>
+
+          <!-- Unnamed (矩形) -->
+          <div id="u4729" class="ax_default label">
+            <div id="u4729_div" class=""></div>
+            <!-- Unnamed () -->
+            <div id="u4730" class="text" style="visibility: visible;">
+              <p><span>书包申请列表</span></p>
+            </div>
+          </div>
+
+          <!-- Unnamed (矩形) -->
+          <div id="u4731" class="ax_default label">
+            <div id="u4731_div" class=""></div>
+            <!-- Unnamed () -->
+            <div id="u4732" class="text" style="visibility: visible;">
+              <p><span>书包列表</span></p>
+            </div>
+          </div>
+
+          <!-- Unnamed (矩形) -->
+          <div id="u4733" class="ax_default label">
+            <div id="u4733_div" class=""></div>
+            <!-- Unnamed () -->
+            <div id="u4734" class="text" style="visibility: visible;">
+              <p><span>新增书包</span></p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
