--- a/添加文章.html
+++ b/添加文章.html
@@ -108,7 +108,7 @@
           <div id="u7202_div" class=""></div>
           <!-- Unnamed () -->
           <div id="u7203" class="text" style="visibility: visible;">
-            <p><span>添加文章</span></p>
+            <p><span>新增文章</span></p>
           </div>
         </div>
       </div>
