--- a/文章管理.html
+++ b/文章管理.html
@@ -694,7 +694,7 @@
           <img id="u7124_img" class="img " src="images/栏目管理/u6420.png"/>
           <!-- Unnamed () -->
           <div id="u7125" class="text" style="visibility: visible;">
-            <p><span>2</span></p>
+            <p><span>动态咨询-今日推荐</span></p>
           </div>
         </div>
 
