--- a/添加子栏目.html
+++ b/添加子栏目.html
@@ -938,7 +938,7 @@
         <img id="u8028_img" class="img " src="images/添加子栏目/u8028.png"/>
         <!-- Unnamed () -->
         <div id="u8029" class="text" style="visibility: visible;">
-          <p><span>1、发布状态为为发布的子栏目不可添加；</span></p><p><span>2、已添加子栏目不可重复添加；</span></p>
+          <p><span>1、发布状态为未发布的子栏目不可添加；</span></p><p><span>2、已添加子栏目不可重复添加；</span></p>
         </div>
       </div>
 
