--- a/添加文章_1.html
+++ b/添加文章_1.html
@@ -146,7 +146,7 @@
           <img id="u8053_img" class="img " src="images/栏目管理/u6420.png"/>
           <!-- Unnamed () -->
           <div id="u8054" class="text" style="visibility: visible;">
-            <p><span>动态咨询-今日推荐</span></p>
+            <p><span>-</span></p>
           </div>
         </div>
 
@@ -191,7 +191,7 @@
           <img id="u8063_img" class="img " src="images/栏目管理/u6420.png"/>
           <!-- Unnamed () -->
           <div id="u8064" class="text" style="visibility: visible;">
-            <p><span>2</span></p>
+            <p><span>动态咨询-今日推荐</span></p>
           </div>
         </div>
 
@@ -885,6 +885,24 @@
         <!-- Unnamed () -->
         <div id="u8220" class="text" style="visibility: visible;">
           <p><span>取消</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (水平线) -->
+      <div id="u8221" class="ax_default line">
+        <img id="u8221_img" class="img " src="images/代理申请列表/u273.png"/>
+        <!-- Unnamed () -->
+        <div id="u8222" class="text" style="display: none; visibility: hidden">
+          <p><span></span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u8223" class="ax_default box_1">
+        <img id="u8223_img" class="img " src="images/添加子栏目/u8028.png"/>
+        <!-- Unnamed () -->
+        <div id="u8224" class="text" style="visibility: visible;">
+          <p><span>1、发布状态为未发布的文章不可添加；</span></p><p><span>2、已添加文章不可重复添加；</span></p>
         </div>
       </div>
     </div>
