--- a/添加文章_1.html
+++ b/添加文章_1.html
@@ -890,7 +890,7 @@
 
       <!-- Unnamed (水平线) -->
       <div id="u8229" class="ax_default line">
-        <img id="u8229_img" class="img " src="images/代理申请列表/u273.png"/>
+        <img id="u8229_img" class="img " src="images/添加文章_1/u8229.png"/>
         <!-- Unnamed () -->
         <div id="u8230" class="text" style="display: none; visibility: hidden">
           <p><span></span></p>
