--- a/代理申请列表.html
+++ b/代理申请列表.html
@@ -1359,7 +1359,7 @@
                 <div id="u288_div" class=""></div>
                 <!-- Unnamed () -->
                 <div id="u289" class="text" style="visibility: visible;">
-                  <p><span>注：请确认申请人小区名字是否无误，有误请点击编辑进行修改</span></p>
+                  <p><span>注：请点击编辑，对该小区进行定位确认无误</span></p>
                 </div>
               </div>
             </div>
