--- a/预备代理列表.html
+++ b/预备代理列表.html
@@ -1129,7 +1129,7 @@
         <img id="u567_img" class="img " src="images/预备代理列表/u567.png"/>
         <!-- Unnamed () -->
         <div id="u568" class="text" style="visibility: visible;">
-          <p><span>1、审核审核通过后，待代理寄回设备检查后，可进行“退押&quot;操作，扣除折损费再退还押金；</span></p><p><span>2、退押申请状态再“已退押，待收款”状态下，可重新点击退押进行修改折损费；&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; </span></p>
+          <p><span>1、审核审核通过后，待代理寄回设备检查后，可进行“退押&quot;操作，扣除折损费再退还押金；</span></p><p><span>2、退押申请状态再“已退押，待收款”状态下，可重新点击退押进行修改折损费；</span></p>
         </div>
       </div>
 
