--- a/会员套餐列表.html
+++ b/会员套餐列表.html
@@ -122,8 +122,8 @@
       <div id="u4406" class="ax_default droplist">
         <select id="u4406_input">
           <option value="套餐类型">套餐类型</option>
-          <option value="试运营套餐">试运营套餐</option>
-          <option value="正式套餐">正式套餐</option>
+          <option value="不含设备套餐">不含设备套餐</option>
+          <option value="含设备套餐">含设备套餐</option>
         </select>
       </div>
 
