--- a/新增子栏目.html
+++ b/新增子栏目.html
@@ -787,6 +787,42 @@
           </select>
         </div>
       </div>
+
+      <!-- Unnamed (水平线) -->
+      <div id="u6757" class="ax_default line">
+        <img id="u6757_img" class="img " src="images/新增子栏目/u6757.png"/>
+        <!-- Unnamed () -->
+        <div id="u6758" class="text" style="display: none; visibility: hidden">
+          <p><span></span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u6759" class="ax_default box_1">
+        <img id="u6759_img" class="img " src="images/新增子栏目/u6759.png"/>
+        <!-- Unnamed () -->
+        <div id="u6760" class="text" style="visibility: visible;">
+          <p><span>点击进入文章列表中选择后，列表中显示文章为：</span></p><p><span>1、未发布到其他栏目的文章；</span></p><p><span>2、文章列表中 文章允许权限 需被包含在 子栏目允许权限内；</span></p><p><span>（如：子栏目允许权限为：小区阅读天使、城市阅读天使、预备阅读天使；则文章允许权限为其中1-3个均可被选择，若出现允许权限为普通用户/会员则不可被选择）</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (水平线) -->
+      <div id="u6761" class="ax_default line">
+        <img id="u6761_img" class="img " src="images/新增子栏目/u6761.png"/>
+        <!-- Unnamed () -->
+        <div id="u6762" class="text" style="display: none; visibility: hidden">
+          <p><span></span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u6763" class="ax_default box_1">
+        <img id="u6763_img" class="img " src="images/新增子栏目/u6763.png"/>
+        <!-- Unnamed () -->
+        <div id="u6764" class="text" style="visibility: visible;">
+          <p><span>添加新文章，文章允许权限不可选中子栏目未选择权限。</span></p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
