--- a/预备代理列表.html
+++ b/预备代理列表.html
@@ -570,8 +570,8 @@
         <div id="u464" class="ax_default table_cell">
           <img id="u464_img" class="img " src="images/代理申请列表/u205.png"/>
           <!-- Unnamed () -->
-          <div id="u465" class="text" style="display: none; visibility: hidden">
-            <p><span></span></p>
+          <div id="u465" class="text" style="visibility: visible;">
+            <p><span>退款异常</span></p>
           </div>
         </div>
 
@@ -638,6 +638,7 @@
           <option value="申请未通过">申请未通过</option>
           <option value="已退押，未收款">已退押，未收款</option>
           <option value="已退押，已收款">已退押，已收款</option>
+          <option value="退款异常">退款异常</option>
           <option value="已升级正式套餐">已升级正式套餐</option>
         </select>
       </div>
